# SelfBalanceCar

./: .mxproject  111.md  Balance_Car.ioc  CLAUDE.md  CMakeLists.txt  README.md
Core/Inc/: main.h  stm32f1xx_it.h
Core/Src/: dma.c  gpio.c  i2c.c  main.c  stm32f1xx_it.c  tim.c  usart.c
Project_Sheet/手机app-vibecoding/: promote.md
Project_Sheet/框架/: 引脚确定.md
Project_Sheet/项目文档/: BLE蓝牙控制命令说明.md  freertos任务切分.md  pid控制.docx  技术文档.docx  项目概述.md
SelfBalanceCar-app/: build_and_install.ps1  build_debug.bat  do_build.bat  gradle.properties  gradlew  gradlew.bat  settings.gradle.kts
SelfBalanceCar-app/app/: build.gradle.kts
SelfBalanceCar-app/app/src/main/: AndroidManifest.xml
SelfBalanceCar-app/app/src/main/java/com/example/balancer/: AxisJoystick.kt  BluetoothManager.kt  ComposeUI.kt  Joystick.kt  MainActivity.kt  ProtocolManager.kt  SettingsScreen.kt
SelfBalanceCar-app/app/src/main/res/drawable/: ic_launcher.xml
SelfBalanceCar-app/app/src/main/res/values/: strings.xml  themes.xml
SelfBalanceCar-app/app/src/main/res/values-zh/: strings.xml
SelfBalanceCar-app/gradle/wrapper/: gradle-wrapper.properties
SelfBalanceCar-app/scripts/: fetch-gradle.ps1
cmake/stm32cubemx/: CMakeLists.txt
components/BSP/: CMakeLists.txt
components/BSP/BLE_Serial/: BLE_Serial.c  BLE_Serial.h
components/BSP/DWT/: DWT.c  DWT.h
components/BSP/I2C/: I2C_Bus.c  I2C_Bus.h
components/BSP/Moitor/: Moitor.c  Moitor.h
components/BSP/RTOS_Communication/: Shared.c  Shared.h
components/BSP/Ultrasonicwave_Communcation/: Ultrasonicwave_Comm.c  Ultrasonicwave_Comm.h
components/Middlewares/: CMakeLists.txt
components/Middlewares/BLE/: BLE.c  BLE.h
components/Middlewares/MPU6050/: MPU6050.c  MPU6050.h
components/Middlewares/OLED/: OLED.c  OLED.h  OLED_Data.c  OLED_Data.h
components/Middlewares/PID/: PID.c  PID.h
components/Middlewares/TaskFolder/: MTask.c  MTask.h
components/Middlewares/Ultrasonicwave_Avoid/: Ult_Avoid.c  Ult_Avoid.h
freertos/: CMakeLists.txt  FreeRTOSConfig.h
note/: 2026-6-12.md  2026-6-13.md  2026-6-16.md  2026-6-18.md  2026-6-25.md  2026-6-26.md  2026-6-29.md  2026-7-4.md  PID调参过程.md
